# sandy

./: Cargo.toml  readme.md  sandy.yml
.github/workflows/: ci.yml
src/: config.rs  exit.rs  getent.rs  main.rs
