[package]
name = "sandy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
command-fds = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
